# argparsenv

./: .gitlab-ci.yml  .pre-commit-config.yaml  README.md  devenv.nix  devenv.yaml  pyproject.toml
.github/workflows/: checks.yml  pylint.yml  python-publish.yml  tag-release.yml
argparsenv/: __init__.py  argparsenv.py
tests/: test_argparsenv.py
