[tool.poetry]
name = "argparsenv"
version = "1.0.0"
description = "Extends python's argparser with environment variables"
authors = ["snaeil <schnegel@posteo.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
overrides = "^7.7.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pytest-cov = "^5.0.0"
mypy = "^1.10.0"
pdoc = "^14.4.0"
bandit = "^1.7.8"
pylint = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
